Add type parameters to most of the remaining places; some other minor warning cleanup